{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 68,
  "lineage": "62887ae5-5e4b-3b29-4e9a-229e4b33181e",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:security-group/sg-0837cb6f876af6e2c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0837cb6f876af6e2c",
            "ingress": [],
            "name": "weatherapp-cluster-cluster-2024121901162151750000000b",
            "name_prefix": "weatherapp-cluster-cluster-",
            "owner_id": "160885268482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "weatherapp-cluster",
              "Name": "weatherapp-cluster-cluster"
            },
            "tags_all": {
              "Example": "weatherapp-cluster",
              "Name": "weatherapp-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:security-group/sg-03e0a2c7cd8a6c681",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-03e0a2c7cd8a6c681",
            "ingress": [],
            "name": "weatherapp-cluster-node-20241219011621516300000009",
            "name_prefix": "weatherapp-cluster-node-",
            "owner_id": "160885268482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "weatherapp-cluster",
              "Name": "weatherapp-cluster-node",
              "kubernetes.io/cluster/weatherapp-cluster": "owned"
            },
            "tags_all": {
              "Example": "weatherapp-cluster",
              "Name": "weatherapp-cluster-node",
              "kubernetes.io/cluster/weatherapp-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3008657939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0837cb6f876af6e2c",
            "security_group_rule_id": "sgr-08e9eea1558b5368e",
            "self": false,
            "source_security_group_id": "sg-03e0a2c7cd8a6c681",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1611130762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-05a9a08b7bf6425d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2409754988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-067b2a68a19ed3eca",
            "self": false,
            "source_security_group_id": "sg-0837cb6f876af6e2c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2506093627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-03c8fb54e18dd7aa8",
            "self": false,
            "source_security_group_id": "sg-0837cb6f876af6e2c",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1545442221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-0f3721987f81c2b6d",
            "self": false,
            "source_security_group_id": "sg-0837cb6f876af6e2c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1329704844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-06d57b42e395281ec",
            "self": false,
            "source_security_group_id": "sg-0837cb6f876af6e2c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-736140359",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-0c6eb2c399ec19894",
            "self": false,
            "source_security_group_id": "sg-0837cb6f876af6e2c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2879981143",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-06e94dcc1933c615d",
            "self": false,
            "source_security_group_id": "sg-0837cb6f876af6e2c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1257438622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-07c645f83c0027930",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1666356776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-0bf5b5b1cbe52d443",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3339531719",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03e0a2c7cd8a6c681",
            "security_group_rule_id": "sgr-0968e2c74f843b983",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:network-acl/acl-0983b2387ca822b94",
            "default_network_acl_id": "acl-0983b2387ca822b94",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0983b2387ca822b94",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "160885268482",
            "subnet_ids": [
              "subnet-0575c9df84ba0a2d2",
              "subnet-057b10b3a000879d1",
              "subnet-065a5969ac8dfc251",
              "subnet-0951f84e68e788efa",
              "subnet-0bc41a98df59c2f6a"
            ],
            "tags": {
              "Name": "weatherapp-cluster-default"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-default"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:route-table/rtb-02fa8cbc9c5dd35b3",
            "default_route_table_id": "rtb-02fa8cbc9c5dd35b3",
            "id": "rtb-02fa8cbc9c5dd35b3",
            "owner_id": "160885268482",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "weatherapp-cluster-default"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:security-group/sg-0d6a743edfc2b668a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d6a743edfc2b668a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "160885268482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weatherapp-cluster-default"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-default"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a5cf860507482ce",
            "arn": "arn:aws:ec2:us-east-2:160885268482:elastic-ip/eipalloc-08a5cf860507482ce",
            "domain": "vpc",
            "id": "eipalloc-08a5cf860507482ce",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-133-253-219.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.253.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "weatherapp-cluster-us-east-2a"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-us-east-2a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c09ae214461aa96e",
            "arn": "arn:aws:ec2:us-east-2:160885268482:elastic-ip/eipalloc-0c09ae214461aa96e",
            "domain": "vpc",
            "id": "eipalloc-0c09ae214461aa96e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-20-71-209.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.71.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "weatherapp-cluster-us-east-2b"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-us-east-2b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:internet-gateway/igw-0f30222224fed91a0",
            "id": "igw-0f30222224fed91a0",
            "owner_id": "160885268482",
            "tags": {
              "Name": "weatherapp-cluster"
            },
            "tags_all": {
              "Name": "weatherapp-cluster"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a5cf860507482ce",
            "association_id": "eipassoc-0e05d52efc34d4c91",
            "connectivity_type": "public",
            "id": "nat-076a0eadd2d912aed",
            "network_interface_id": "eni-0ffab50fcc799fa62",
            "private_ip": "10.12.1.8",
            "public_ip": "3.133.253.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bc41a98df59c2f6a",
            "tags": {
              "Name": "weatherapp-cluster-us-east-2a"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-us-east-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c09ae214461aa96e",
            "association_id": "eipassoc-0741e9c2932486bd7",
            "connectivity_type": "public",
            "id": "nat-0d66b5fc3d245ffb6",
            "network_interface_id": "eni-031e4bae711569e9b",
            "private_ip": "10.12.2.197",
            "public_ip": "3.20.71.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0951f84e68e788efa",
            "tags": {
              "Name": "weatherapp-cluster-us-east-2b"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-us-east-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04202d2a0e9f03e4d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-076a0eadd2d912aed",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04202d2a0e9f03e4d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-053ac286d191dc4981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d66b5fc3d245ffb6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-053ac286d191dc498",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f30222224fed91a0",
            "id": "r-rtb-0872807b2ec12909c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0872807b2ec12909c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:route-table/rtb-0700d3c8dc6d9dcc1",
            "id": "rtb-0700d3c8dc6d9dcc1",
            "owner_id": "160885268482",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "weatherapp-cluster-intra"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:route-table/rtb-04202d2a0e9f03e4d",
            "id": "rtb-04202d2a0e9f03e4d",
            "owner_id": "160885268482",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "weatherapp-cluster-private-us-east-2a"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-private-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:route-table/rtb-053ac286d191dc498",
            "id": "rtb-053ac286d191dc498",
            "owner_id": "160885268482",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "weatherapp-cluster-private-us-east-2b"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-private-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:route-table/rtb-0872807b2ec12909c",
            "id": "rtb-0872807b2ec12909c",
            "owner_id": "160885268482",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "weatherapp-cluster-public"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dd8ad4442d890cc",
            "route_table_id": "rtb-0700d3c8dc6d9dcc1",
            "subnet_id": "subnet-057b10b3a000879d1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078f11d1ebd8738a7",
            "route_table_id": "rtb-0700d3c8dc6d9dcc1",
            "subnet_id": "subnet-0575c9df84ba0a2d2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eee027ee126277c",
            "route_table_id": "rtb-04202d2a0e9f03e4d",
            "subnet_id": "subnet-0372592e4ec4fbc12"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba4cbe7d7b6a9a43",
            "route_table_id": "rtb-053ac286d191dc498",
            "subnet_id": "subnet-065a5969ac8dfc251"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c561d3865bfdf69d",
            "route_table_id": "rtb-0872807b2ec12909c",
            "subnet_id": "subnet-0bc41a98df59c2f6a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a030beaf5752dfc3",
            "route_table_id": "rtb-0872807b2ec12909c",
            "subnet_id": "subnet-0951f84e68e788efa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:subnet/subnet-057b10b3a000879d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.12.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057b10b3a000879d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885268482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weatherapp-cluster-intra-us-east-2a"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-intra-us-east-2a"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:subnet/subnet-0575c9df84ba0a2d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.12.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0575c9df84ba0a2d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885268482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weatherapp-cluster-intra-us-east-2b"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-intra-us-east-2b"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:subnet/subnet-0372592e4ec4fbc12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.12.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0372592e4ec4fbc12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885268482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weatherapp-cluster-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:subnet/subnet-065a5969ac8dfc251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.12.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065a5969ac8dfc251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885268482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weatherapp-cluster-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:subnet/subnet-0bc41a98df59c2f6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.12.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc41a98df59c2f6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885268482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weatherapp-cluster-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:subnet/subnet-0951f84e68e788efa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.12.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0951f84e68e788efa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885268482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weatherapp-cluster-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "weatherapp-cluster-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b2d4b61365a54623"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:vpc/vpc-0b2d4b61365a54623",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-0983b2387ca822b94",
            "default_route_table_id": "rtb-02fa8cbc9c5dd35b3",
            "default_security_group_id": "sg-0d6a743edfc2b668a",
            "dhcp_options_id": "dopt-06e0c19fc953b8c6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2d4b61365a54623",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fa8cbc9c5dd35b3",
            "owner_id": "160885268482",
            "tags": {
              "Name": "weatherapp-cluster"
            },
            "tags_all": {
              "Name": "weatherapp-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}